fix week number z-index problem

--- a/packages/daygrid/src/styles/daygrid.css
+++ b/packages/daygrid/src/styles/daygrid.css
@@ -1,7 +1,8 @@
 
-$daygrid-text-z: 4; // one more than .fc-highlight's z-index. WEIRD solution
-$daygrid-event-z: 5;
-$daygrid-popover-z: 6;
+$daygrid-topbottom-z: 4; // one more than .fc-highlight's z-index. WEIRD solution
+$daygrid-weeknum-z: 5;
+$daygrid-event-z: 6;
+$daygrid-popover-z: 7;
 
 
 .fc-daygrid-body { // a <div> that wraps the table
@@ -58,7 +59,7 @@ $daygrid-popover-z: 6;
 
 .fc-daygrid-day-top {
   position: relative;
-  z-index: $daygrid-text-z;
+  z-index: $daygrid-topbottom-z;
 
   &:after {
     @include clearfix;
@@ -124,7 +125,7 @@ $daygrid-popover-z: 6;
 
 .fc-daygrid-day-bottom {
   position: relative;
-  z-index: $daygrid-text-z;
+  z-index: $daygrid-topbottom-z;
   font-size: .85em;
   margin: 2px 3px 0;
 }
@@ -152,7 +153,7 @@ $daygrid-popover-z: 6;
 
 .fc-daygrid-week-number {
   position: absolute;
-  z-index: $daygrid-text-z;
+  z-index: $daygrid-weeknum-z;
   top: 0;
   padding: 2px;
   min-width: 1.5em;
